--- a/shopping.html
+++ b/shopping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shopping-Site</title>
+  <title>Shopping</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -15,14 +15,14 @@
   <div class="navbar">
  
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact Informatiom</a>
   <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
  
  
 </div>
-<h1 class="name">Fashion Store</h1>
-<img src="image.jpg" class="image">
+<h1 class="name">ONLINE STORE</h1>
+<img src="C:\Users\KSwapna\Downloads\shopping-online-on-website-vector.jpg" class="image">
 <br><br><br>
 <h1 class="content">Our Latest Products</h1>
  <br><br>
@@ -30,73 +30,73 @@
   <div class="products">
  
     <div class="card">
- <div class="img"><img src="OPI.jpeg" alt=""></div>
- <div class="title">Sandal</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP1.jpeg" alt=""></div>
+ <div class="title">Groceries</div>
  <div class="box">
-   <div class="price">Price:$50</div>
+   <div class="price">Starting price:50</div>
 <button class="btn">Buy Now</button>
   </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="1.jpg" alt=""></div>
- <div class="title">Fancy Dress</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP3.jpeg" alt=""></div>
+ <div class="title">Womens Wear</div>
  <div class="box">
-   <div class="price">Price:$30</div>
+   <div class="price">Starting Price:199</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="3.jpg" alt=""></div>
- <div class="title">Hand bag</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\th1.jpeg" alt=""></div>
+ <div class="title">Hand bags</div>
  <div class="box">
-   <div class="price">Price:$50</div>
+   <div class="price">Starting Price:300</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="2.avif" alt=""></div>
- <div class="title">Fancy Dress</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP4.jpeg" alt=""></div>
+ <div class="title">Mens Wear</div>
  <div class="box">
-   <div class="price">Price:$50</div>
+   <div class="price">Starting Price:299</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="4.jpg" alt=""></div>
- <div class="title">Hand Bag</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\t.jpeg" alt=""></div>
+ <div class="title">Kids Wear </div>
  <div class="box">
-   <div class="price">Price:$100</div>
+   <div class="price">Starting Price:149</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="5.jpg" alt=""></div>
- <div class="title">Chain Set</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP7.jpeg" alt=""></div>
+ <div class="title">Chains</div>
  <div class="box">
-   <div class="price">Price:$15</div>
+   <div class="price">Starting Price:99</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="7.jpg" alt=""></div>
- <div class="title">Bangle Set</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\the.jpeg" alt=""></div>
+ <div class="title">Bangles</div>
  <div class="box">
-   <div class="price">Price:$10</div>
+   <div class="price">Starting Price:99</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="8.jpg" alt=""></div>
- <div class="title">Anklets</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP8.jpeg" alt=""></div>
+ <div class="title">Shoes</div>
  <div class="box">
-   <div class="price">Price:$35</div>
+   <div class="price">Starting Price:199</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
@@ -104,79 +104,79 @@
 </div>
 </section><br><br>
 <hr><br>
-<h1 class="content">Discount Sale-Upto 50% Off</h1>
+<h1 class="content">Discount Sale-Upto 10%- 60% Off</h1>
 <br>
 <section class="sec">
   <div class="products">
  
     <div class="card">
- <div class="img"><img src="9.jpg" alt=""></div>
- <div class="title">Ear Rings</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\electronics.png" alt=""></div>
+ <div class="title">Electronics</div>
  <div class="box">
-   <div class="price">$14:10% Off</div>
+   <div class="price">40% Off</div>
 <button class="btn">Buy Now</button>
   </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="10.webp" alt=""></div>
- <div class="title">Hair Bands</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP2.jpeg" alt=""></div>
+ <div class="title">Mobiles Phones</div>
  <div class="box">
-   <div class="price">$20:30% Off</div>
+   <div class="price">30% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="17.jpg" alt=""></div>
- <div class="title">High Heels</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\th3.jpeg" alt=""></div>
+ <div class="title">Fancy Jewellery</div>
  <div class="box">
-   <div class="price">40$-10% Off</div>
+   <div class="price">30% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="16.avif" alt=""></div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\download.jpeg" alt=""></div>
  <div class="title">Spectacles</div>
  <div class="box">
-   <div class="price">60$-20% Off</div>
+   <div class="price">20% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="15.avif" alt=""></div>
- <div class="title">Maxi Dress</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\download (1).jpeg" alt=""></div>
+ <div class="title">Dresses</div>
  <div class="box">
-   <div class="price">30$:20% Off</div>
+   <div class="price">40% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="14.jpg" alt=""></div>
- <div class="title">Gold Bracelet</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\th6.jpeg"alt=""></div>
+ <div class="title">Gold Jewellery</div>
  <div class="box">
-   <div class="price">50$-15% Off</div>
+   <div class="price">15% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="13.jpg" alt=""></div>
- <div class="title">Silver Ring</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\OIP9.jpeg" alt=""></div>
+ <div class="title">Silver Jewellery</div>
  <div class="box">
-   <div class="price">10$-3% Off</div>
+   <div class="price">20% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
 
 <div class="card">
- <div class="img"><img src="12.jpg" alt=""></div>
- <div class="title">Watch</div>
+ <div class="img"><img src="C:\Users\KSwapna\OneDrive\Pictures\Desktop\download (2).jpeg" alt=""></div>
+ <div class="title">Watches</div>
  <div class="box">
-   <div class="price">35$-5% Off</div>
+   <div class="price">35% Off</div>
 <button class="btn">Buy Now</button>
 </div>
 </div>
@@ -185,3 +185,8 @@
 </section>
 </body>
 </html>
+
+
+
+
+ 
