--- a/shopping.html
+++ b/shopping.html
@@ -14,9 +14,9 @@
 <body>
   <div class="navbar">
  
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact Informatiom</a>
-  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+  <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact Informatiom</a>
+  <a href="search.html"><i class="fa fa-fw fa-search"></i> Search</a>
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
  
  
