--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@ margin-top:20px;
 height:45px;
 width:400px;
 border-radius:50px;
-background: #89CFF0;
+background:white;
 
 }
 
@@ -33,3 +33,9 @@ background: #89CFF0;
         </div>
 </body>
 </html>
+
+
+
+
+
+ 
